[package]
name = "axum-solid-playground"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Patrick Recher <p@tte.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
dotenv = "0.15.0"
hyper = { version = "1.1.0", features = ["full"], optional = true}
hyper-util = { version = "0.1.3", features = ["client-legacy"], optional = true}
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tower-sessions = { version = "0.10.2" }
tower-sessions-rusqlite-store = { version = "0.1.0" }
tower-cookies = { version = "0.10" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v7"] }
#webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }
# use from github to get conditional-ui feature
webauthn-rs = { git = "https://github.com/kanidm/webauthn-rs.git", features = ["conditional-ui", "danger-allow-state-serialisation"] }
rusqlite = { version = "0.30.0", features = ["bundled", "uuid", "chrono"] }
tokio-rusqlite = "0.5.0"
rusqlite_migration = { version = "1.1.0", features = ["from-directory", "alpha-async-tokio-rusqlite"] }
include_dir = "0.7.3"
lazy_static = "1.4.0"
serde_json = "1.0.113"
rmp-serde = "1.1.2"
axum-embed = "0.1.0"
rust-embed = "8"
uaparser = "0.6.1"
chrono = { version = "0.4.34", features = ["serde"] }

[dependencies.cookie]
features = ["percent-encode"]

[profile.release]
strip=true

[features]
dev_proxy = ["hyper", "hyper-util"]
